--- a/src/package.json
+++ b/src/package.json
@@ -32,6 +32,7 @@
     "eslint": "^7.10.0",
     "eslint-plugin-nuxt": "^1.0.0",
     "jest": "^26.5.0",
+    "tailwindcss": "^2.0.1-compat",
     "ts-jest": "^26.4.1",
     "vue-jest": "^3.0.4"
   }
