--- a/src/package.json
+++ b/src/package.json
@@ -31,7 +31,9 @@
     "babel-jest": "^26.5.0",
     "eslint": "^7.10.0",
     "eslint-plugin-nuxt": "^1.0.0",
+    "faker": "^5.1.0",
     "jest": "^26.5.0",
+    "miragejs": "^0.1.41",
     "tailwindcss": "^2.0.1-compat",
     "ts-jest": "^26.4.1",
     "vue-jest": "^3.0.4"
